# smart-food-ordering

./: .gitignore  README.md  alembic.ini  pyproject.toml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/versions/: 45e411cf3a07_drop_unused_refund_requests_fields.py  9390211e9153_drop_unused_support_conversations_fields.py
backend/app/api/routes/: account_orders.py  refunds.py  support.py
backend/app/core/: settings.py
backend/app/models/: refund_request.py  support_conversation.py
backend/app/repositories/: order_repository.py  refund_repository.py  support_repository.py
backend/app/schemas/: account.py  order_placement.py  refund.py  support.py
backend/app/scripts/: cleanup_guests.py
backend/app/services/: account_order_service.py  notification_service.py  order_placement_service.py  refund_service.py  support_chat_service.py
backend/app/services/cache/: __init__.py  client.py  helpers.py
backend/tests/integration/: test_auth_session_header_precedence.py  test_order_placement_routes.py  test_refund_routes.py  test_support_routes.py
backend/tests/unit/: test_notification_service.py  test_refund_repository.py  test_refund_service.py  test_support_cache_invalidation.py
design/specs/architecture/: 01-mvp-system-architecture.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: FloatingChatWidget.tsx  Header.tsx
frontend/src/context/: AuthContext.tsx  CartContext.tsx
frontend/src/pages/: DashboardPage.tsx  OrderDetailPage.tsx  OrderPlacementPage.tsx  (+5 more)
(+2 files in other folders)
